Fix scrollbar appearing over status bar
If navigation links in sidebar do not fit on screen, the scrollbar
extended into the title bar above.

--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -24,7 +24,9 @@
 }
 
 nav {
-  margin-block-start: 0.5rem;
+  padding-block: 0.5rem;
+  overflow-y: auto;
+  max-height: calc(100% - 64px);
 }
 
 .nav-link {
